# botAgente

./: .env-example  .gitignore  PyWhatKit_DB.txt  README.md  app.py  env-example  pyproject.toml  readme.md  requirements.txt  sendtoIndividualWP.py  test2.py
py-files/: getRawData.py  test_env.py  whatsapp_automation.py
py-files/pywhatkit/: app_test.py  toreplace_core.py
py-files/selenium/: testselen.py  whatsapp_automation.py
scripts/: app.py  sendIndividualWP.py  toreplace_core.py
src/: app.py  sendIndividualWP.py
src/testing-folder/: test-error.py
