[tool.poetry]
package-mode = false
name = "botagente"
version = "0.2.1"
description = "A sample project"
authors = ["John J Meza <www.johnometalman.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pywhatkit = "^5.4"
requests = "^2.28.0"
pyperclip = "^1.8.2"  # Added for clipboard support
Pillow = "^10.0.0"    # Added for image handling
pywin32 = "^306"      # Added for Windows clipboard support (Windows only)
pyautogui = "^0.9.54" # Ensure latest version for better compatibility

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"